[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/shared/Fade.gd" type="Script" id=1]

[node name="Fade" type="Node"]
script = ExtResource( 1 )

[node name="TweenFadeIn" type="Tween" parent="."]

[node name="TweenFadeOut" type="Tween" parent="."]

[connection signal="tween_all_completed" from="TweenFadeOut" to="." method="_on_TweenFadeOut_tween_all_completed"]
